<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/segundaTelaRedefinir"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6DB5FF"
    tools:context=".ActivitySegundaRedefinir">

    <ImageView
        android:id="@+id/imageViewLogoSegundaTelaRedefinir"
        android:layout_width="385dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="19dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewSegundaTelaRedefinir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textViewSegundaTelaRedefinir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="31dp"
        android:text="Redefinir Senha"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextCodigoSegundaTelaRedefinir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogoSegundaTelaRedefinir" />

    <EditText
        android:id="@+id/editTextCodigoSegundaTelaRedefinir"
        android:layout_width="295dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="Codigo de Validação"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/editTextSenhaSegundaTelaRedefinir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSegundaTelaRedefinir" />

    <EditText
        android:id="@+id/editTextSenhaSegundaTelaRedefinir"
        android:layout_width="295dp"
        android:layout_height="48dp"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="316dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="Senha"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextCodigoSegundaTelaRedefinir"
        app:layout_constraintTop_toBottomOf="@+id/editTextCodigoSegundaTelaRedefinir" />

    <EditText
        android:id="@+id/editTextConfirmaSenhaSegundaTelaRedefinir"
        android:layout_width="295dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="Confirme sua Senha"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/btnRedefinirSegundaTelaRedefinir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutSegundaTelaRedefinir" />

    <Button
        android:id="@+id/btnRedefinirSegundaTelaRedefinir"
        android:layout_width="185dp"
        android:layout_height="48dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="#FA934D"
        android:text="Redefinir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutSegundaTelaRedefinir"
        app:layout_constraintVertical_bias="0.981" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutSegundaTelaRedefinir"
        android:layout_width="319dp"
        android:layout_height="118dp"
        android:layout_marginBottom="160dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.608"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSenhaSegundaTelaRedefinir"
        app:layout_constraintVertical_bias="0.763">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_marginBottom="7dp"
            android:text="@string/senha"
            app:layout_constraintBottom_toTopOf="@+id/textView12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.004"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:text="@string/requisito1"
            app:layout_constraintBottom_toTopOf="@+id/textView13"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/requisito2"
            app:layout_constraintBottom_toTopOf="@+id/textView14"
            app:layout_constraintEnd_toEndOf="@+id/textView12"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/requisito3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView13"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView13"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/imageButtonVoltarTelaRedefinir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:backgroundTint="#07FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnRedefinirSegundaTelaRedefinir"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextConfirmaSenhaSegundaTelaRedefinir"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/_829860_arrow_back_left_icon" />
</androidx.constraintlayout.widget.ConstraintLayout>