<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/telaCadastro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6DB5FF"
    tools:context=".ActivityCadastro">

    <TextView
        android:id="@+id/textViewTelaCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="Crie Sua Conta"
        android:textColor="#FA934D"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNomeCadastro"
        android:layout_width="295dp"
        android:layout_height="48dp"
        android:layout_marginTop="136dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="Nome "
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editTextSenhaCadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTelaCadastro"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextSenhaCadastro"
        android:layout_width="295dp"
        android:layout_height="48dp"
        android:layout_marginTop="244dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="Senha"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/ConstraintSenhaCadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTelaCadastro"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnValidarCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="#FA934D"
        android:text="validar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnVoltarLoginCadastro"
        app:layout_constraintTop_toBottomOf="@+id/ConstraintSenhaCadastro"
        app:layout_constraintVertical_bias="0.974" />

    <Button
        android:id="@+id/btnVoltarLoginCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:backgroundTint="#FA934D"
        android:text="voltar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.265"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnValidarCadastro" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConstraintSenhaCadastro"
        android:layout_width="202dp"
        android:layout_height="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.745">

        <TextView
            android:id="@+id/textViewPrimeiroDetalheSenhaCadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/requisito1"
            android:textSize="8sp"
            app:layout_constraintBottom_toTopOf="@+id/textViewSegundoDetalheSenhaCadastro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textViewTerceiroDetalheSenhaCadastro"
            app:layout_constraintTop_toBottomOf="@+id/textViewDetalhesSenhaCadastro" />

        <TextView
            android:id="@+id/textViewDetalhesSenhaCadastro"
            android:layout_width="177dp"
            android:layout_height="23dp"
            android:layout_marginTop="25dp"
            android:text="A senha deve possuir estes  requisitos:"
            android:textSize="10sp"
            app:layout_constraintBottom_toTopOf="@+id/textViewPrimeiroDetalheSenhaCadastro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.36"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="A senha deve possuir estes  requisitos:" />

        <TextView
            android:id="@+id/textViewSegundoDetalheSenhaCadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/requisito2"
            android:textSize="8sp"
            app:layout_constraintBottom_toTopOf="@+id/textViewTerceiroDetalheSenhaCadastro"
            app:layout_constraintEnd_toEndOf="@+id/textViewPrimeiroDetalheSenhaCadastro"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toEndOf="@+id/textViewPrimeiroDetalheSenhaCadastro"
            app:layout_constraintTop_toBottomOf="@+id/textViewPrimeiroDetalheSenhaCadastro" />

        <TextView
            android:id="@+id/textViewTerceiroDetalheSenhaCadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/requisito3"
            android:textSize="8sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.164"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSegundoDetalheSenhaCadastro" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>